<resources>
    <string name="app_name">All Practicals</string>
    <string name="text_item_name">Item Name</string>
    <string-array name="navigation_drawer_item_array">
        <item>Login</item>
        <item>Register</item>
        <item>View user list</item>
        <item>Runtime Permissions</item>
        <item>Easy Image picker</item>
    </string-array>
    <string name="login_fragment">login fragment</string>
    <string name="register_fragment">register fragment</string>
    <string name="textView_name_co">TFFP</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="editText_hint_mobile_no">Mobile no.</string>
    <string name="text_password">Password</string>
    <string name="EditText_hint_password">Password</string>
    <string name="textView_forgot_password">Forget password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="header_subtitle">User@android.com</string>
    <string name="header_title">Android Studio</string>
    <string name="text_subtitle">Company</string>
    <string name="text_password_confirm">Confirm Password</string>
    <string name="EditText_hint_password_confirm">Confirm Password</string>
    <string name="text_email">Email</string>
    <string name="editText_hint_email">Email</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="tv_user_name">User Name</string>
    <string name="tv_user_email">user@mail.com</string>
    <string name="activity_name_user">User list</string>
    <string name="activity_name_easy_image">Easy image picker</string>
    <string name="nav_item_view_user_list">View User list</string>
    <string name="nav_item_register">Registration</string>
    <string name="nav_item_login">Login</string>
    <string name="preference_file_key">UserPreferences</string>
    <string name="preference_name_key">nameKey</string>
    <string name="preference_email_key">emailKey</string>
    <string name="session_preference_file_key">SessionPreference</string>
    <string name="preference_mobile_no_key">mobileNoKey</string>
    <string name="preference_count_key">countKey</string>
    <string name="permission_fragment">Runtime Permission Fragment</string>
    <string name="nav_item_permission">Runtime Permissions</string>
    <string name="positive_button">YES</string>
    <string name="negative_button">No</string>
    <string name="neutral_button">Cancel</string>
    <string name="btn_upload">Upload</string>
    <string name="nav_item_easy_image">Easy image</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="nav_menu_group_activity">Activity</string>
    <string name="nav_item_view_pager">View pager</string>
    <string name="tv_viewPager">View Pager</string>
    <string name="activity_easy_image">Easy Image</string>
    <string name="activity_view_pager">ViewPager with TabLayout</string>
    <string name="nav_item_bottom_nav">Bottom Navigation</string>
    <string name="nav_home">Home</string>
    <string name="nav_view_pager">View pager</string>
    <string name="nav_account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_login_success">Login Success</string>
    <string name="msg_login_fail">Login Fail</string>
    <string name="msg_mobile_no_empty">Mobile number is empty</string>
    <string name="msg_mobile_no_invalid">Mobile number is invalid</string>
    <string name="msg_password_empty">Password is empty</string>
    <string name="msg_password_invalid">Password is Invalid</string>
    <string name="msg_permission_granted">Permission Granted</string>
    <string name="msg_permission_denied">Permission Denied\n</string>
    <string name="msg_permission_denied_msg"><![CDATA[If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > Permissions[STORAGE, CAMERA]]]></string>
    <string name="option_capture_image">Capture Image</string>
    <string name="option_choose_image">Choose Image</string>
    <string name="option_open_chooser">Open Chooser</string>
    <string name="msg_error_occurred">\"error occurred: \"</string>
    <string name="msg_canceled">canceled</string>
    <string name="msg_permission_required">Permissions required to application work!</string>
    <string name="msg_warning_duplicate_entry">Duplicate entry!  \nTry different one</string>
    <string name="msg_first_name_empty">First name is empty</string>
    <string name="msg_last_name_empty">Last name is empty</string>
    <string name="msg_email_empty">Email is empty</string>
    <string name="msg_email_invalid">email is invalid</string>
    <string name="msg_confirm_password_empty">Confirm password is empty</string>
    <string name="msg_confirm_password_invalid">Confirm password is invalid</string>
    <string name="msg_password_not_matched"><![CDATA[\"Password & Confirm password not matched \"]]></string>
    <string name="nav_item_retrofit">Retrofit</string>
    <string name="api_response_text">API Response text.</string>
    <string name="empty_list_text">No record found</string>
    <string name="tv_id">Id</string>
    <string name="add_record">Add record</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_desc">Enter description</string>
    <string name="nav_item_sqLiteDB">sqLite DB</string>
    <string name="update_country">Update Country</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
</resources>