<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_login"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/nav_item_login" />
        <item
            android:id="@+id/nav_menu_register"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/nav_item_register" />
        <item
            android:id="@+id/nav_menu_rt_permission"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/nav_item_permission" />
    </group>

    <item android:title="@string/nav_menu_group_activity">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_menu_view_user_list"
                    android:icon="@drawable/ic_baseline_list_alt_24"
                    android:title="@string/nav_item_view_user_list" />
                <item
                    android:id="@+id/nav_menu_easy_image"
                    android:icon="@drawable/ic_baseline_add_photo_alternate_24"
                    android:title="@string/nav_item_easy_image" />
                <item
                    android:id="@+id/nav_menu_view_pager"
                    android:icon="@drawable/ic_baseline_view_carousel_24"
                    android:title="@string/nav_item_view_pager" />
                <item
                    android:id="@+id/nav_menu_bottom_nav"
                    android:icon="@drawable/ic_baseline_call_to_action_24"
                    android:title="@string/nav_item_bottom_nav" />
                <item
                    android:id="@+id/nav_menu_retrofit"
                    android:icon="@drawable/ic_baseline_settings_system_daydream_24"
                    android:title="@string/nav_item_retrofit" />
            </group>
        </menu>
    </item>
</menu>