<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/camara___ff_black_transperent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/os_bold"
            android:gravity="center"
            android:text="@string/textView_name_co"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_subtitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/os_regular"
            android:gravity="center"
            android:text="@string/text_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/text_subtitle"
            tools:layout_editor_absoluteX="25dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/os_regular"
                android:text="@string/text_mobile_no"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_label" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_rect_stroke_1"
                android:ems="10"
                android:fontFamily="@font/os_regular"
                android:hint="@string/editText_hint_mobile_no"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="@dimen/input_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/os_regular"
                android:text="@string/text_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_label" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_rect_stroke_1"
                android:ems="10"
                android:fontFamily="@font/os_regular"
                android:hint="@string/EditText_hint_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="@dimen/input_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/os_semibold"
                android:text="@string/textView_forgot_password" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_rect_solid"
                android:fontFamily="@font/os_bold"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_rect_stroke"
                android:fontFamily="@font/os_bold"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="#E91E63" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>