<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_list_country"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@android:color/white"
    android:elevation="6dp"
    android:padding="5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_id"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/os_semibold"
        android:gravity="center"
        android:text="@string/tv_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_toEndOf="@id/tv_id"
        android:fontFamily="@font/os_semibold"
        android:text="@string/tv_user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_toEndOf="@+id/tv_id"
        android:fontFamily="@font/os_regular"
        android:text="@string/tv_user_email" />
</RelativeLayout>